<resources>
    <string name="app_name">Nasa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">34th ANC</string>
    <string name="nav_header_subtitle">Info app fofr 34th ANC</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_keynote">Keynote</string>
    <string name="menu_feedbaclk">Feedback Form</string>
    <string name="menu_workshop">Workshops</string>
    <string name="menu_handshake">Handshakes</string>
    <string name="menu_master">Masters</string>
    <string name="menu_seminar">Seminars</string>
    <string name="menu_eventlist">Event List</string>
</resources>