<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/menu_keynote"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_keynote" />
        <item
            android:id="@+id/menu_seminar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_seminar" />
        <item
            android:id="@+id/menu_master"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_master" />
        <item
            android:id="@+id/menu_handshake"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_handshake" />
        <item
            android:id="@+id/menu_workshop"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_workshop" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_baseline_format_quote_24"
            android:title="@string/menu_feedbaclk" />
    </group>
</menu>
